Home index.html updated, Medid & projects directory

--- a/index.html
+++ b/index.html
@@ -4,21 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Larry Hudson</title>
+  <title>Home Page</title>
+  <nav>
+    <a href="/">Home</a> |
+    <a href="./projects/">Projects</a> |
+    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
+  </nav>
+<style color="red">
+  h1 {
+    font-family: verdana;
+  }
+  p {
+    color: blue;
+  }
+  .secondary {
+    color:red;
+  }
+  .big {
+    font-family:fantasy;
+  }
+  .important {
+    color: orange;
+  }
+</style>
 </head>
 <body>
-  <img src='https://lh3.googleusercontent.com/-XkbT6foABeg/UsDVo37rsjI/AAAAAAAACw8/BPirzAB5pmskJBQXp4Q8y6VGGFVy1-3QACEw/w140-h93-p/DSC_0036.JPG'>
-<h1> Hello My Name is Larry Hudson</h1>
-<ul>
-<li>My wife name is Maranda</li>
-<li>I have 4 boys</li>
-<li>I have 5 grand kids</li>
-</ul>
-<a href="https://www.instagram.com/lhudson3222/">Instagram</a>
-
-
-<p>I love to learn new things and meeting new people.</p>
-
-
+  <!--This is Larry Hudson's page hope you like my code-->
+  <img src="IMG_2319.jpg" alt="" width="30%">
+  <h1>This is my <i class="secondary">awesome</i> title</h1>
+  <p>Lorem Ipsum <i class="important big"> is simply dummy text of </i>the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. .</p>
+  <h1 id="secondary">This is my 2nd awesome title</h1>
+  <br>
+  <!--This is Larry Hudson's page jope you like it once again-->
+  <a href="http://www.instagram.com/LHudson3222">Instagram</a>
 </body>
 </html>
