Home index.html updated, Medid & projects directory

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="/">Home</a> |
     <a href="./projects/">Projects</a> |
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
+    <a href="/blog/">Blog</a>
   </nav>
 <style color="red">
   h1 {
@@ -30,7 +31,7 @@
 </head>
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
-  <img src="IMG_2319.jpg" alt="" width="30%">
+  <img src="IMG_2319.jpg" alt="" width="60%">
   <h1>This is my <i class="secondary">awesome</i> title</h1>
   <p>Lorem Ipsum <i class="important big"> is simply dummy text of </i>the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. .</p>
   <h1 id="secondary">This is my 2nd awesome title</h1>
