--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="/">Home</a> |
     <a href="./projects/">Projects</a> |
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
-    <a href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a> |
   </nav>
 <style color="red">
   h1 {
@@ -38,5 +38,6 @@
   <br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a>
+  <a href="tel:423-777-9311">My REAL phone number.</a>
 </body>
 </html>
