--- a/index.html
+++ b/index.html
@@ -21,9 +21,27 @@
   .secondary {
     color:red;
   }
+
   .big {
     font-family:fantasy;
   }
+html{
+  box-sizing: border-box;
+}
+*{
+  border: 2px solid red;
+}
+div {
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+}
+div {
+    box-sizing: border-box;
+    width: 300px;
+    height: 200px;
+}
   .important {
     color: orange;
   }
