added some commands

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@ div {
     padding-left: 10px;
 }
 div {
+    padding: 5px 10px 5px 10px;
+}
+div {
+    padding: 5px 10px;
+}
+div {
+    box-sizing: border-box;
+    width: 300px;
+    height: 200px;
+}
+div {
     box-sizing: border-box;
     width: 300px;
     height: 200px;
