--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ div {
   }
 </style>
 </head>
+<!-- for your landing page -->
+<link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
   <img src="IMG_2319.jpg" alt="" width="60%">
