added css styes

--- a/index.html
+++ b/index.html
@@ -11,61 +11,61 @@
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
     <a href="/blog/">Blog</a> |
   </nav>
-<style color="red">
-  h1 {
-    font-family: verdana;
-  }
-  p {
-    color: blue;
-  }
-  .secondary {
-    color:red;
-  }
+  <style color="green">
+    h1 {
+      font-family: verdana;
+    }
+    p {
+      color: blue;
+    }
+    .secondary {
+      color:red;
+    }
 
-  .big {
-    font-family:fantasy;
+    .big {
+      font-family:fantasy;
+    }
+    html{
+      box-sizing: border-box;
+    }
+  *{
+    border: 2px solid red;
   }
-html{
-  box-sizing: border-box;
-}
-*{
-  border: 2px solid red;
-}
-div {
-    padding-top: 5px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-}
-div {
-    padding: 5px 10px 5px 10px;
-}
-div {
-    padding: 5px 10px;
-}
-div {
-    box-sizing: border-box;
-    width: 300px;
-    height: 200px;
-}
-div {
-    box-sizing: border-box;
-    width: 300px;
-    height: 200px;
-}
-  .important {
-    color: orange;
+  div {
+      padding-top: 5px;
+      padding-right: 10px;
+      padding-bottom: 5px;
+      padding-left: 10px;
   }
-</style>
+  div {
+      padding: 5px 10px 5px 10px;
+  }
+  div {
+      padding: 5px 10px;
+  }
+  div {
+      box-sizing: border-box;
+      width: 300px;
+      height: 200px;
+  }
+  div {
+      box-sizing: border-box;
+      width: 300px;
+      height: 200px;
+  }
+    .important {
+      color: orange;
+    }
+  </style>
 </head>
 <!-- for your landing page -->
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
   <img src="IMG_2319.jpg" alt="" width="60%">
-  <h1>This is my <i class="secondary">awesome</i> title</h1>
-  <p>Lorem Ipsum <i class="important big"> is simply dummy text of </i>the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. .</p>
-  <h1 id="secondary">This is my 2nd awesome title</h1>
+  <h1>Brotherhood</i></h1>
+  <p><h3>With brothers you become friends. Some you hang out with more than others. You talk to one about the other a little more. You get mad at them. Then, you love them. Then, you apologize. You have to apologize whether you want to or not. You have to. That's your brother.</h3></p>
+  <h1 id="secondary"> New Years 2018!!!!</h1>
   <br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a>
