--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home Page</title>
   <nav>
-    <a href="/">Home</a> |
-    <a href="./projects/">Projects</a> |
+    <a href="../index.html">Home</a> |
+    <a href="../projects/index.html">Projects</a> |
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
-    <a href="/blog/">Blog</a> |
+    <a href="../blog/index.html">Blog</a> |
   </nav>
   <style color="green">
     h1 {
