--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
     <a href="../blog/index.html">Blog</a> |
   </nav>
+
   <style color="green">
-    h1 {
+    h1{
       font-family: verdana;
     }
     p {
       color: blue;
     }
+    col
     .secondary {
       color:red;
     }
@@ -36,6 +38,9 @@
       padding-right: 10px;
       padding-bottom: 5px;
       padding-left: 10px;
+  }
+  body{
+    background-color: light;
   }
   div {
       padding: 5px 10px 5px 10px;
@@ -62,7 +67,7 @@
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
-  <img src="IMG_2319.jpg" alt="" width="60%">
+  <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
   <h1>Brotherhood</i></h1>
   <p><h3>With brothers you become friends. Some you hang out with more than others. You talk to one about the other a little more. You get mad at them. Then, you love them. Then, you apologize. You have to apologize whether you want to or not. You have to. That's your brother.</h3></p>
   <h1 id="secondary"> New Years 2018!!!!</h1>
