--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       padding-left: 10px;
   }
   body{
-    background-color: light;
+    background-color:yellow;
+  }
+  body{
+    font-family: cursive;
   }
   div {
       padding: 5px 10px 5px 10px;
@@ -68,7 +71,8 @@
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
   <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
-  <h1>Brotherhood</i></h1>
+
+<center><h1>Brotherhood</i></h1></center>
   <p><h3>With brothers you become friends. Some you hang out with more than others. You talk to one about the other a little more. You get mad at them. Then, you love them. Then, you apologize. You have to apologize whether you want to or not. You have to. That's your brother.</h3></p>
   <h1 id="secondary"> New Years 2018!!!!</h1>
   <br>
