--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
   <!--This is Larry Hudson's page hope you like my code-->
   <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
 
-<center><h1>Brotherhood</i></h1></center>
-  <p><h3>With brothers you become friends. Some you hang out with more than others. You talk to one about the other a little more. You get mad at them. Then, you love them. Then, you apologize. You have to apologize whether you want to or not. You have to. That's your brother.</h3></p>
-  <h1 id="secondary"> New Years 2018!!!!</h1>
+<center><h1>WCLG Port Saint Lucie FL.</i></h1></center>
+<center><h1 id="secondary"> Happy New Years 2018!!!!</h1></center><br>
+  <p><h3> Year’s end is neither an end nor a beginning but a going on, with all the wisdom that experience can instill in us. Cheers to a new year and another chance for us to get it right.</h3></p>
+
   <br>
   <!--This is Larry Hudson's page jope you like it once again-->
-  <a href="http://www.instagram.com/LHudson3222">Instagram</a>
+  <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
   <a href="tel:423-777-9311">My REAL phone number.</a>
 </body>
 </html>
