--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     background-color:yellow;
   }
   body{
-    font-family: cursive;
+    font-family: serif;
   }
   div {
       padding: 5px 10px 5px 10px;
