--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+ <title>Document</title>
 </head>
 <!--Had to rename the file from contact to index.html
 -->
@@ -59,12 +59,15 @@
       <option value="networking">We met at a networking event</option>
       <option value="referral">Personal referral</option>
       <option value="random">We met somewhere else</option>
+      <option value="random">We met at the club</option>
+      <option value="random">We met at church</option>
     </optgroup>
     <option value="other">Other</option>
   </select>
 
   <textarea name="user_message" rows="8" cols="40"></textarea>
   <input type="submit">
+
 </form>
 
 </body>
