--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
+    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
   </nav>
 
@@ -45,6 +45,7 @@
   body{
     font-family: serif;
   }
+
   div {
       padding: 5px 10px 5px 10px;
   }
@@ -74,9 +75,10 @@
 
 <center><h1>WCLG Port Saint Lucie FL.</i></h1></center>
 <center><h1 id="secondary"> Happy New Years 2018!!!!</h1></center><br>
-  <p><h3> Year’s end is neither an end nor a beginning but a going on, with all the wisdom that experience can instill in us. Cheers to a new year and another chance for us to get it right.</h3></p>
+  <p><h2> Years end is neither an end nor a beginning but a going on, with all the wisdom that experience can instill in us. Cheers to a new year and another chance for us to get it right.</h2></p>
 
   <br>
+  <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
   <a href="tel:423-777-9311">My REAL phone number.</a>
