added Media Page

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,8 +14,9 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact Me</a> |
+    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
+    <a href="../Media/index.html">Media</a> |
   </nav>
   <br><br>
   <!--
