--- a/projects/index.html
+++ b/projects/index.html
@@ -11,6 +11,7 @@
     <a href="../projects/index.html">Projects</a> |
     <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
+    <a href="../Media/index.html">Media</a> |
   </nav>
 </head>
 
