--- a/contact/index.html
+++ b/contact/index.html
@@ -36,19 +36,19 @@
 <form action="form-responses/new" method="POST">
 
   <input type="text" name="firstname" value="First Name" size="100" autofocus>
-  <input type="text" name="lastname" value="Last Name" size="100">
-  <input type="email" name="userEmail" placeholder="your.email@example.com">
+  <input type="text" name="lastname" value="Last Name" size="100"><br><br>
+  <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
 
-  <label>What's this message about?
+  <label>What's this message about?<br>
     <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
     <input type="radio" name="subject" value="personal" checked><span>Personal message</span>
     <input type="radio" name="subject" value="other" checked><span>Don't know/something else</span>
-  </label>
+  </label><br><br>
 
   <input type="checkbox" name="optin" value="trusting" checked>Subscribe me to your newsletter!
-  <input type="checkbox" name="optout" value="skeptical" disabled>Cheeky checkbox...
-
-  <label for="marketing">How did you hear about me?</label>
+  <input type="checkbox" name="optout" value="skeptical" checked>No Thanks
+<br><br>
+  <label for="marketing">How did you hear about me?</label><br>
   <select name="marketing">
     <optgroup label="Online">
       <option value="social">Social Media (FB, Twitter, LinkedIn)</option>
@@ -64,12 +64,13 @@
       <option value="random">We met at church</option>
     </optgroup>
     <option value="other">Other</option>
-  </select>
+  </select><br><br><br>
 
   <textarea name="user_message" rows="8" cols="40"></textarea>
   <input type="submit">
-
-</form><br><br><br>
+<br><br><br>
+</form>
+<form action="//formspree.io/lhudson322@gmail.com" method="POST">
 <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
 <!--This is Larry Hudson's page jope you like it once again-->
 <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
