--- a/contact/index.html
+++ b/contact/index.html
@@ -33,8 +33,9 @@
   The method attribute specifies the HTTP method (GET or POST)
 -->
 
-<form action="form-responses/new" method="POST">
-
+<!--<form action="form-responses/new" method="POST">-->
+<form action="//formspree.io/lhudson322@gmail.com" method="POST">
+  
   <input type="text" name="firstname" value="First Name" size="100" autofocus>
   <input type="text" name="lastname" value="Last Name" size="100"><br><br>
   <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
@@ -70,7 +71,7 @@
   <input type="submit">
 <br><br><br>
 </form>
-<form action="//formspree.io/lhudson322@gmail.com" method="POST">
+
 <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
 <!--This is Larry Hudson's page jope you like it once again-->
 <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
