changed the email format

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
+    <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
     <a href="../Media/index.html">Media</a> |
   </nav>
@@ -35,7 +35,7 @@
 
 <!--<form action="form-responses/new" method="POST">-->
 <form action="//formspree.io/lhudson322@gmail.com" method="POST">
-  
+
   <input type="text" name="firstname" value="First Name" size="100" autofocus>
   <input type="text" name="lastname" value="Last Name" size="100"><br><br>
   <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
