--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
+    <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |
+    <a href="/Media">Media</a> |
   </nav>
 
   <style color="green">
