--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="mailto:lhudson322@gmail.com?Subject=Contact%20Form">Contact</a> |
+    <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
     <a href="../Media/index.html">Media</a> |
   </nav>
