--- a/greeter/greeter.html
+++ b/greeter/greeter.html
@@ -7,11 +7,35 @@
   <title>Greeting Page</title>
 </head>
 <body>
-
-  <script type="text/javascript">
+  <!--<script type="text/javascript">
   var name = prompt('What is your name?');
 
   alert('Hello ' + name);
-  </script>
+</script>-->
+  <!--<script type="text/javascript">
+    var name = prompt('What is your name?');
+
+    if(name === "") { // checks for an empty string
+      name = prompt('What is your name, for real this time?');
+    }
+
+    alert('Hello ' + name);
+  </script>-->
+  <script type="text/javascript">
+  var name = prompt('What is your name?');
+
+  var checkName = function(){
+    if(name === "") {
+      name = prompt('What is your name, for real this time?');
+
+      checkName(); // repeats until a name exists
+    }
+  }
+
+  checkName(); // kicks off the name-checking the first time
+
+  alert('Hello ' + name);
+</script>
+<script type="text/javascript" src="greeter.js"></script>
 </body>
 </html>
