--- a/Media/index.html
+++ b/Media/index.html
@@ -9,6 +9,7 @@
   <title>Media Page</title>
 </head>
 <body>
+
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
@@ -16,6 +17,30 @@
     <a href="../blog/index.html">Blog</a> |
     <a href="../Media/index.html">Media</a> |
  </nav>
- <br><h1>This is my Media Page</h1>
+ <br><h1>This is my Media Page</h1><br><br>
+
+
+<a href="https://www.youtube.com/watch?v=QXd2ar8RzO0">Youtube</a>
+ <!--<iframe width="1280" height="750" src="//https://www.youtube.com/watch?v=QXd2ar8RzO0" frameborder="0" allowfullscreen></iframe>__>
+
+<!-- <video
+   src="#defer-loading"
+   poster="nice-default.
+   autoplay
+ />-->
+
+ <!--<video src="videofile.ogg" autoplay poster="posterimage.jpg">
+
+ </video>-->
+
+ </div>
+<br><br><br><br>
+<br>
+<a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
+<!--This is Larry Hudson's page jope you like it once again-->
+<a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
+<a href="lhudson322@gmail.com">Email</a><br>
+<a href="tel:423-777-9311">My REAL phone number.</a>
+
 </body>
 </html>
