--- a/projects/index.html
+++ b/projects/index.html
@@ -23,5 +23,11 @@
       <li></li>
     </ul>
   </p>
+  <br><br><br>
+  <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
+  <!--This is Larry Hudson's page jope you like it once again-->
+  <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
+  <a href="lhudson322@gmail.com">Email</a><br>
+  <a href="tel:423-777-9311">My REAL phone number.</a>
 </body>
 </html>
