--- a/contact/index.html
+++ b/contact/index.html
@@ -1,80 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link type="text/css" rel="stylesheet" href="../css/style.css"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <title>Contact Page</title>
-</head>
-<!--Had to rename the file from contact to index.html
--->
-<body>
-
+  <title>Contact Page</title>
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |
-  </nav>
-  <br><br>
-  <!--
+    <a href="/Media">Media</a> |
+  </nav><br><br>
+
+</head>
+<link type="text/css" rel="stylesheet" href="../css/style.css"/>
+<body>
 <p>
- <form>
+  <!--<form>
   <input type="text">
   <input type="password">
   <input type="email">
   <input type="submit">
-</form>
-</p>
+</form>-->
+
 <!--
-  The action attribute defines where on the server the form data should be sent
-  The method attribute specifies the HTTP method (GET or POST)
+ The action attribute defines where on the server the form data should be sent
+ The method attribute specifies the HTTP method (GET or POST)
 -->
 
-<!--<form action="form-responses/new" method="POST">-->
-<form action="//formspree.io/lhudson322@gmail.com" method="POST">
+<form action="form-responses/new" method="POST">
 
-  <input type="text" name="firstname" value="First Name" size="100" autofocus>
-  <input type="text" name="lastname" value="Last Name" size="100"><br><br>
-  <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
+ <input type="text" name="firstname" value="First Name" size="100" autofocus><br>
+ <input type="text" name="lastname" value="Last Name" size="100"><br><br>
+ <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
 
-  <label>What's this message about?<br>
-    <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
-    <input type="radio" name="subject" value="personal" checked><span>Personal message</span>
-    <input type="radio" name="subject" value="other" checked><span>Don't know/something else</span>
-  </label><br><br>
+ <label>What's this message about?<br>
+   <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
+   <input type="radio" name="subject" value="personal" checked><span>Personal message</span>
+   <input type="radio" name="subject" value="other" checked><span>Don't know/something else</span>
+ </label><br><br>
 
-  <input type="checkbox" name="optin" value="trusting" checked>Subscribe me to your newsletter!
-  <input type="checkbox" name="optout" value="skeptical" checked>No Thanks
-<br><br>
-  <label for="marketing">How did you hear about me?</label><br>
-  <select name="marketing">
-    <optgroup label="Online">
-      <option value="social">Social Media (FB, Twitter, LinkedIn)</option>
-      <option value="github">Online Portfolio (GitHub)</option>
-      <option value="search">Search Engine</option>
-      <option value="email">Email</option>
-    </optgroup>
-    <optgroup label="In-Person">
-      <option value="networking">We met at a networking event</option>
-      <option value="referral">Personal referral</option>
-      <option value="random">We met somewhere else</option>
-      <option value="random">We met at the club</option>
-      <option value="random">We met at church</option>
-    </optgroup>
-    <option value="other">Other</option>
-  </select><br><br><br>
+ <input type="checkbox" name="optin" value="trusting" checked>Subscribe me to your newsletter!
+ <input type="checkbox" name="optout" value="skeptical" disabled>No Thank You!
+ <br><br>
 
-  <textarea name="user_message" rows="8" cols="40"></textarea>
-  <input type="submit">
-<br><br><br>
+ <label for="marketing">How did you hear about me?</label>
+ <select name="marketing">
+   <optgroup label="Online">
+     <option value="social">Social Media (FB, Twitter, LinkedIn)</option>
+     <option value="github">Online Portfolio (GitHub)</option>
+     <option value="search">Search Engine</option>
+     <option value="email">Email</option>
+   </optgroup>
+   <optgroup label="In-Person">
+     <option value="networking">We met at a networking event</option>
+     <option value="referral">Personal referral</option>
+     <option value="random">We met somewhere else</option>
+     <option value="random">We met at church</option>
+     <option value="random">We met at the club</option>
+   </optgroup>
+   <option value="other">Other</option>
+ </select><br><br><br><br>
+
+ <textarea name="user_message" rows="8" cols="40"></textarea>
+ <input type="submit">
 </form>
-
-<a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
-<!--This is Larry Hudson's page jope you like it once again-->
-<a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-<a href="tel:423-777-9311">My REAL phone number.</a>
+<h1>Connect With Me</h1>
+</p>
+  <br>
+  <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
+  <!--This is Larry Hudson's page jope you like it once again-->
+  <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
+  <a href="lhudson322@gmail.com">Email</a><br>
+  <a href="tel:423-777-9311">My REAL phone number.</a>
 </body>
 </html>
