--- a/Media/index.html
+++ b/Media/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Media Page</title>
+
 </head>
 <body>
 
@@ -20,7 +21,7 @@
  <br><h1>This is my Media Page</h1><br><br>
 
 
-<a href="https://www.youtube.com/watch?v=QXd2ar8RzO0">Youtube</a>
+<!--<a href="URL=https://www.youtube.com/watch?v=QXd2ar8RzO0">Youtube</a>-->
  <!--<iframe width="1280" height="750" src="//https://www.youtube.com/watch?v=QXd2ar8RzO0" frameborder="0" allowfullscreen></iframe>__>
 
 <!-- <video
@@ -28,6 +29,8 @@
    poster="nice-default.
    autoplay
  />-->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QXd2ar8RzO0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
  <!--<video src="videofile.ogg" autoplay poster="posterimage.jpg">
 
@@ -39,7 +42,7 @@
 <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
 <!--This is Larry Hudson's page jope you like it once again-->
 <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-<a href="lhudson322@gmail.com">Email</a><br>
+<a href="mailto:lhudson322@gmail.com">Email</a>  <br>
 <a href="tel:423-777-9311">My REAL phone number.</a>
 
 </body>
