--- a/greeter/greeter.html
+++ b/greeter/greeter.html
@@ -36,6 +36,10 @@
 
   alert('Hello ' + name);
 </script>
-<script type="text/javascript" src="greeter.js"></script>
+
+<!--<script type="text/javascript" src="greeter.js"></script>-->
+
+
+</script>
 </body>
 </html>
