--- a/Media/index.html
+++ b/Media/index.html
@@ -12,13 +12,13 @@
 <body>
 
   <nav>
-    <a href="../index.html">Home</a> |
+  <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |
+    <a href="../Media/index.html">Media</a> |</center>
  </nav>
- <br><h1>This is my Media Page</h1><br><br>
+ <center><br><h1>This is my Media Page</h1><br><br></center>
 
 
 <!--<a href="URL=https://www.youtube.com/watch?v=QXd2ar8RzO0">Youtube</a>-->
@@ -29,9 +29,9 @@
    poster="nice-default.
    autoplay
  />-->
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QXd2ar8RzO0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+<center>
+<iframe width="600" height="315" src="https://www.youtube.com/embed/QXd2ar8RzO0" frameborder="200" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</center>
  <!--<video src="videofile.ogg" autoplay poster="posterimage.jpg">
 
  </video>-->
