--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home Page</title>
   <nav>
-    <a href="../index.html">Home</a> |
+  <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
-    <a href="/Media">Media</a> |
+    <a href="/Media">Media</a> |</center>
   </nav>
 
   <style color="green">
