--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Projects Page</title>
   <nav>
-    <a href="../index.html">Home</a> |
+  <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |
+    <a href="../Media/index.html">Media</a> |</center>
   </nav>
 </head>
+<br>
+<br>
 
 <body>
   <p>
