--- a/Media/index.html
+++ b/Media/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style color="green">
+  body{
+    background-color:yellow;
+  }
+  body{
+    font-family: cursive;
+  }
 
+  </style>
   <link type="text/css" rel="stylesheet" href="../css/style.css"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
