--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style color="green">
+  body{
+    background-color:yellow;
+  }
+  body{
+    font-family: cursive;
+  }
+
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
