--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style color="green">
+  body{
+    background-color:yellow;
+  }
+  body{
+    font-family: cursive;
+  }
+
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,9 +22,10 @@
     <a href="/Media">Media</a> |</center>
   </nav>
 
+
   <style color="green">
     h1{
-      font-family: verdana;
+      font-family: cursive;
     }
     p {
       color: blue;
@@ -26,7 +36,7 @@
     }
 
     .big {
-      font-family:fantasy;
+      font-family:cursive;
     }
     html{
       box-sizing: border-box;
@@ -72,7 +82,7 @@
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
   <!--This is Larry Hudson's page hope you like my code-->
-  <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
+<br>  <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
 
 <center><h1>WCLG Port Saint Lucie FL.</i></h1></center>
 <center><h1 id="secondary"> Happy New Years 2018!!!!</h1></center><br>
