--- a/greeter/greeter.html
+++ b/greeter/greeter.html
@@ -8,6 +8,7 @@
   <title>Greeting Page</title>
 </head>
 <body>
+<h1>Greeter </h1>
   <!--<script type="text/javascript">
   var name = prompt('What is your name?');
 
