--- a/greeter/greeter.html
+++ b/greeter/greeter.html
@@ -7,6 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Greeting Page</title>
   <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+  <nav>
+  <center>  <a href="../index.html">Home</a> |
+    <a href="../projects/index.html">Projects</a> |
+    <a href="../contact/index.html">Contact</a> |
+    <a href="../blog/index.html">Blog</a> |
+    <a href="/Media">Media</a> |</center>
+  </nav>
 </head>
 <body>
 <h1>Greeter </h1>
