--- a/contact/index.html
+++ b/contact/index.html
@@ -18,6 +18,7 @@
   <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
+    <a href="../greeter/greeter.html">Greeter</a>|
     <a href="../blog/index.html">Blog</a> |
     <a href="/Media">Media</a> |</center>
   </nav><br><br>
