--- a/Media/index.html
+++ b/Media/index.html
@@ -23,9 +23,10 @@
   <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
+    <a href="../greeter/greeter.html">Greeter</a>|
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |</center>
- </nav>
+    <a href="/Media">Media</a> |</center>
+  </nav>
  <center><br><h1>This is my Media Page</h1><br><br></center>
 
 
