--- a/projects/index.html
+++ b/projects/index.html
@@ -19,8 +19,9 @@
   <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
+    <a href="../greeter/greeter.html">Greeter</a>|
     <a href="../blog/index.html">Blog</a> |
-    <a href="../Media/index.html">Media</a> |</center>
+    <a href="/Media">Media</a> |</center>
   </nav>
 </head>
 <br>
