--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,6 @@
   <center>  <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
-    <a href="../greeter/greeter.html">Greeter</a>|
     <a href="../blog/index.html">Blog</a> |
     <a href="/Media">Media</a> |</center>
   </nav>
@@ -31,8 +30,8 @@
   <p>
     <ul>
       <li>Class Showcase</li>
-      <li></li>
-      <li></li>
+      <li>Choose Your Own Adventure</li>
+      <li>Web Store Hack-A-Thon</li>
     </ul>
   </p>
   <br><br><br>
