--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     background-color:yellow;
   }
   body{
-    font-family: serif;
+    font-family:  cursive;
   }
 
   div {
@@ -82,7 +82,7 @@
 <!-- for your landing page -->
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
-  <script type="text/javascript">
+<!--  <script type="text/javascript">
   var name = prompt('What is your name?');
 
   var checkName = function(){
@@ -109,7 +109,8 @@
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
 <!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
-<a href="lhudson322@gmail.com">Email</a> <br>
+<a href="mailto:lhudson322@gmail.com">Email</a> <br>
+
 
   <a href="tel:423-777-9311">My REAL phone number.</a>
 </body>
