--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!-- for your landing page -->
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
-<!--  <script type="text/javascript">
+ <script type="text/javascript">
   var name = prompt('What is your name?');
 
   var checkName = function(){
