--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
   alert('Hello ' + name);
 </script>
   <!--This is Larry Hudson's page hope you like my code-->
-<br>  <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
+  
+<br>
+ <center><img src="IMG_2319.jpg" alt="" width="60%"></center>
 
 <center><h1>WCLG Port Saint Lucie FL.</i></h1></center>
 <center><h1 id="secondary"> Happy New Years 2018!!!!</h1></center><br>
