--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
  The method attribute specifies the HTTP method (GET or POST)
 -->
 
-<form action="form-responses/new" method="POST">
+<!-- <form action="form-responses/new" method="POST">
 
  <input type="text" name="firstname" value="First Name" size="100" autofocus><br>
  <input type="text" name="lastname" value="Last Name" size="100"><br><br>
@@ -74,10 +74,19 @@
 
  <textarea name="user_message" rows="8" cols="40"></textarea>
  <input type="submit">
+</form> -->
+
+<form method="POST" action="https://formspree.io/lhudson322@gmail.com">
+<input type="email" name="email" placeholder="Your email">
+<textarea name="message" placeholder="Your message"></textarea>
+<button type="submit">Send</button>
 </form>
+
 <h1>Connect With Me</h1>
 </p>
   <br>
+
+
   <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
