--- a/contact/index.html
+++ b/contact/index.html
@@ -38,11 +38,13 @@
  The method attribute specifies the HTTP method (GET or POST)
 -->
 
-<!-- <form action="form-responses/new" method="POST">
+ <form action="form-responses/new" method="POST">
 
- <input type="text" name="firstname" value="First Name" size="100" autofocus><br>
- <input type="text" name="lastname" value="Last Name" size="100"><br><br>
- <input type="email" name="userEmail" placeholder="your.email@example.com"><br><br>
+ <input type="text" name="firstname" value="First Name" size="40" autofocus>
+ <input type="text" name="lastname" value="Last Name" size="40">
+ <!--<input type="email" name="userEmail" placeholder="your.email@example.com">-->
+<input type="email" name="email" placeholder="your.email@example.com"size="25">
+ <br><br>
 
  <label>What's this message about?<br>
    <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
@@ -72,14 +74,14 @@
    <option value="other">Other</option>
  </select><br><br><br><br>
 
- <textarea name="user_message" rows="8" cols="40"></textarea>
+ <!--<textarea name="user_message" rows="8" cols="40"></textarea>
  <input type="submit">
-</form> -->
+</form>-->
 
 <form method="POST" action="https://formspree.io/lhudson322@gmail.com">
-<input type="email" name="email" placeholder="Your email">
-<textarea name="message" placeholder="Your message"></textarea>
-<button type="submit">Send</button>
+
+<textarea name="message" placeholder="Your message" rows="8" cols="40"></textarea>
+<button type="submit">Submit</button>
 </form>
 
 <h1>Connect With Me</h1>
