--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
 <input type="email" name="email" placeholder="your.email@example.com"size="25">
  <br><br>
 
- <label>What's this message about?<br>
+ <label>What's this message about?<br><br>
    <input type="radio" name="subject" value="professional" checked><span>I'd like to hire you!</span>
    <input type="radio" name="subject" value="personal" checked><span>Personal message</span>
    <input type="radio" name="subject" value="other" checked><span>Don't know/something else</span>
@@ -93,6 +93,8 @@
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
 <a href="mailto:lhudson322@gmail.com">Email</a>  <br>
-  <a href="tel:423-777-9311">My REAL phone number.</a>
+  <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
+  © 2018 Larry Hudson
+
 </body>
 </html>
