--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       box-sizing: border-box;
     }
   *{
-    border: 2px solid red;
+    border: 10px;
+    border-radius: 75px;
   }
   div {
-      padding-top: 5px;
-      padding-right: 10px;
+      padding-top: 10px;
+      padding-right: 20px;
       padding-bottom: 5px;
-      padding-left: 10px;
+      padding-left: 20px;
   }
   body{
     background-color:yellow;
@@ -66,13 +67,13 @@
   }
   div {
       box-sizing: border-box;
-      width: 300px;
-      height: 200px;
+      width: 0px;
+      height: 0px;
   }
   div {
       box-sizing: border-box;
-      width: 300px;
-      height: 200px;
+      width: 50px;
+      height: 50px;
   }
     .important {
       color: orange;
@@ -82,7 +83,7 @@
 <!-- for your landing page -->
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
- <script type="text/javascript">
+<!-- <script type="text/javascript">
   var name = prompt('What is your name?');
 
   var checkName = function(){
@@ -96,7 +97,7 @@
   checkName(); // kicks off the name-checking the first time
 
   alert('Hello ' + name);
-</script>
+</script>-->
   <!--This is Larry Hudson's page hope you like my code-->
 
 <br>
