--- a/projects/cyoa/index.html
+++ b/projects/cyoa/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CYOA page</title>
+  <link type="text/css" rel="stylesheet" href="../css/style.css"/>
 </head>
 
 <body>
 
 <h1>Maze Runner</h1>
 <script text=JavaScript src="cyoa.js">
-
+<link type="text/css" rel="stylesheet" href="../css/style.css"/>
 </script>
 </body>
 
