--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <style color="green">
   body{
     background-color:yellow;
@@ -14,31 +15,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Projects Page</title>
-  <nav>
-  <center>  <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../blog/index.html">Blog</a> |
-    <a href="/Media">Media</a> |</center>
-  </nav>
+<title>Projects Page</title>
+<nav>
+<center>
+<!--  <button>Home</button>
+<a href="home" class="button">Home</a>
+<button class="button">Button</button>
+<input type="button" class="button" value="Input Button">-->
+  <button>
+  <a href="../index.html"class="button">Home</a> |
+  <a href="../projects/index.html"class="button">Projects</a> |
+  <a href="../contact/index.html"class="button">Contact</a> |
+  <a href="../blog/index.html"class="button">Blog</a> |
+  <a href="/Media"class="button">Media</a> |</center></button>
+</nav>
+
 </head>
 <br>
 <br>
 
 <body>
+
+  <h1>Project Page</h1><br><br><br>
   <p>
     <ul>
       <li>Class Showcase</li>
       <li>Choose Your Own Adventure</li>
       <li>Web Store Hack-A-Thon</li>
-    </ul>
-  </p>
+    </ul> </p>
+    <right><img id="header-image" src="IMG_2319.jpg" alt="" width="30%"></right>
+
   <br><br><br>
   <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
   <a href="mailto:lhudson322@gmail.com">Email</a>  <br>
   <a href="tel:423-777-9311">My REAL phone number.</a>
+
 </body>
 </html>
