--- a/Media/index.html
+++ b/Media/index.html
@@ -20,11 +20,17 @@
 <body>
 
   <nav>
-  <center>  <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../blog/index.html">Blog</a> |
-    <a href="/Media">Media</a> |</center>
+  <center>
+  <!--  <button>Home</button>
+<a href="home" class="button">Home</a>
+<button class="button">Button</button>
+<input type="button" class="button" value="Input Button">-->
+    <button>
+    <a href="../index.html"class="button">Home</a> |
+    <a href="../projects/index.html"class="button">Projects</a> |
+    <a href="../contact/index.html"class="button">Contact</a> |
+    <a href="../blog/index.html"class="button">Blog</a> |
+    <a href="/Media"class="button">Media</a> |</center></button>
   </nav>
  <center><br><h1>This is my Media Page</h1><br><br></center>
 
