--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
     font-family: cursive;
   }
 
+
   </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home Page</title>
   <nav>
-  <center>  <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../blog/index.html">Blog</a> |
-    <a href="/Media">Media</a> |</center>
+  <center>
+  <!--  <button>Home</button>
+<a href="home" class="button">Home</a>
+<button class="button">Button</button>
+<input type="button" class="button" value="Input Button">-->
+    <button>
+    <a href="../index.html"class="button">Home</a> |
+    <a href="../projects/index.html"class="button">Projects</a> |
+    <a href="../contact/index.html"class="button">Contact</a> |
+    <a href="../blog/index.html"class="button">Blog</a> |
+    <a href="/Media"class="button">Media</a> |</center></button>
   </nav>
 
 
