added google plus

--- a/index.html
+++ b/index.html
@@ -116,13 +116,16 @@
   <p><h2> Years end is neither an end nor a beginning but a going on, with all the wisdom that experience can instill in us. Cheers to a new year and another chance for us to get it right.</h2></p>
 
   <br>
+
+  <h2>Contact Me:</h2>
   <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
+  <a href="https://plus.google.com/u/0/">Google Plus</a><br>
 <!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
 <a href="mailto:lhudson322@gmail.com">Email</a> <br>
+  <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
 
-
-  <a href="tel:423-777-9311">My REAL phone number.</a>
+  @ 2018 LJH
 </body>
 </html>
