--- a/projects/index.html
+++ b/projects/index.html
@@ -30,27 +30,33 @@
   <a href="/Media"class="button">Media</a> |</center></button>
 </nav>
 
+
 </head>
 <br>
 <br>
 
 <body>
 
-  <h1>Project Page</h1><br><br><br>
+  <h1>Project Page</h1><br>
   <p>
     <ul>
       <li>Class Showcase</li>
       <li>Choose Your Own Adventure</li>
       <li>Web Store Hack-A-Thon</li>
     </ul> </p>
-    <right><img id="header-image" src="IMG_2319.jpg" alt="" width="30%"></right>
+    <img id="dog-image" src="IMG_2319.jpg" alt="Rocky" width="30%">
 
   <br><br><br>
+  <h2>Contact Me:</h2>
   <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>
-  <a href="tel:423-777-9311">My REAL phone number.</a>
+  <a href="https://plus.google.com/u/0/">Google Plus</a><br>
+<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
+<a href="mailto:lhudson322@gmail.com">Email</a> <br>
+  <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
+
+  @ 2018 LJH
 
 </body>
 </html>
