--- a/Media/index.html
+++ b/Media/index.html
@@ -53,11 +53,16 @@
  </div>
 <br><br><br><br>
 <br>
+<h2>Contact Me:</h2>
 <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
 <!--This is Larry Hudson's page jope you like it once again-->
 <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-<a href="mailto:lhudson322@gmail.com">Email</a>  <br>
-<a href="tel:423-777-9311">My REAL phone number.</a>
+<a href="https://plus.google.com/u/0/">Google Plus</a><br>
+<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
+<a href="mailto:lhudson322@gmail.com">Email</a> <br>
+<a href="tel:423-777-9311">My REAL phone number.</a><br><br>
+
+@ 2018 LJH
 
 </body>
 </html>
