--- a/contact/index.html
+++ b/contact/index.html
@@ -95,12 +95,16 @@
   <br>
 
 
+  <h2>Contact Me:</h2>
   <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
   <!--This is Larry Hudson's page jope you like it once again-->
   <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-<a href="mailto:lhudson322@gmail.com">Email</a>  <br>
+  <a href="https://plus.google.com/u/0/">Google Plus</a><br>
+<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
+<a href="mailto:lhudson322@gmail.com">Email</a> <br>
   <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
-  © 2018 Larry Hudson
+
+  @ 2018 LJH
 
 </body>
 </html>
