--- a/projects/index.html
+++ b/projects/index.html
@@ -39,12 +39,19 @@
 
   <h1>Project Page</h1><br>
   <p>
-    <ul>
-      <li>Class Showcase</li>
+    <ol>
+    <!--  <li>Class Showcase</li>
       <li>Choose Your Own Adventure</li>
       <li>Web Store Hack-A-Thon</li>
-    </ul> </p>
-    <img id="dog-image" src="IMG_2319.jpg" alt="Rocky" width="30%">
+    </ul> </p>-->
+
+
+    <li><a href="https://twp2studentshowcase.netlify.com/">Class Showcase</a> </li>
+     <li> <a href="cyoa">Choose Your Own Adventure</script></li>
+     <li>Web Store Hack-A-Thon</li>
+    </ol>
+  <img id="dog-image" src="IMG_2319.jpg" alt="Rocky" width="30%">
+
 
   <br><br><br>
   <h2>Contact Me:</h2>
