--- a/projects/rps/index.html
+++ b/projects/rps/index.html
@@ -10,6 +10,6 @@
 <body>
   <h1>Rock, Paper, Scissors</h1>
   <script type="text/javascript" src="rps.js"></script>
-
+<link type="text/css" rel="stylesheet" href="../css/style.css"/>
 </body>
 </html>
