--- a/projects/cyoa/index.html
+++ b/projects/cyoa/index.html
@@ -20,6 +20,22 @@
 <body>
 
 <h1>Choose Your Own Adventure</h1>
+<script type="text/javascript">
+ var name = prompt('What is your name?');
+
+ var checkName = function(){
+   if(name === "") {
+     name = prompt('What is your name, for real this time?');
+
+     checkName(); // repeats until a name exists
+   }
+ }
+
+ checkName(); // kicks off the name-checking the first time
+
+ alert('Hello ' + name);
+</script>
+
 <script text=JavaScript src="cyoa.js">
 <link type="text/css" rel="stylesheet" href="../css/style.css"/>
 </script>
