added buttons for group

--- a/exercise/while/index.html
+++ b/exercise/while/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+  <title>Choose-Your-Own-Adventure</title>
 </head>
 <body>
+<h1>Choose-Your-Own-Adventure</h1><br><br>
+<ul>
+  <li>EXERCISE 1</li>
+  <li>EXERCISE 2</li>
+  <li>EXERCISE 3</li>
+  <li>EXERCISE 4</li>
+  <li>EXERCISE 5</li>
+  <li>EXERCISE 6</li>
+</ul>
+
+<script text=JavaScript src="while.js">
+<link type="text/css" rel="stylesheet" href="../css/style.css"/>
+</script>
+
+
+<br><br>
+<a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
+<!--This is Larry Hudson's page jope you like it once again-->
+<a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
+<a href="https://plus.google.com/u/0/">Google Plus</a><br>
+<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
+<a href="mailto:lhudson322@gmail.com">Email</a> <br>
+<a href="tel:423-777-9311">My REAL phone number.</a><br><br>
+
+@ 2018 LJH
 
 </body>
 </html>
