--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
     <a href="../contact/index.html"class="button">Contact</a> |
     <a href="../blog/index.html"class="button">Blog</a> |
     <a href="/Media"class="button">Media</a> |</center></button>
-  </nav>><br><br>
+  </nav><br><br>
 
 </head>
 <link type="text/css" rel="stylesheet" href="../css/style.css"/>
