--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,10 @@
 
 <body>
 
-  <h1>Project Page</h1><br>
+<nav>
+  <h1>Project Page & Some Helpful Links</h1><br>
+
+</nav>
   <p>
     <ol>
     <!--  <li>Class Showcase</li>
@@ -50,7 +53,19 @@
      <li> <a href="cyoa">Choose Your Own Adventure</script></li>
      <li>Web Store Hack-A-Thon</li>
     </ol>
-  <img id="dog-image" src="IMG_2319.jpg" alt="Rocky" width="30%">
+  <!--<img id="dog-image" src="IMG_2319.jpg" alt="Rocky" width="30%">-->
+  <br>
+
+<ol>
+  <li>https://getbootstrap.com/docs/4.0/components/jumbotron/</li>
+  <li>https://www.w3schools.com/bootstrap/default.asp</li>
+  <li>https://unsplash.com/</li>
+  <li>https://www.google.com/doodles/celebrating-50-years-of-kids-coding</li>
+  <li>https://www.youtube.com/watch?v=eg1-8ts9cFc</li>
+</ol>
+
+
+
 
 
   <br><br><br>
