--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style color="green">
   body{
     background-color:yellow;
@@ -119,14 +120,23 @@
   <br>
 
   <h2>Contact Me:</h2>
-  <a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>
-  <!--This is Larry Hudson's page jope you like it once again-->
-  <a href="http://www.instagram.com/LHudson3222">Instagram</a><br>
-  <a href="https://plus.google.com/u/0/">Google Plus</a><br>
-<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
-<a href="mailto:lhudson322@gmail.com">Email</a> <br>
-  <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
+<a href="https://github.com/LarryHudson322"><i class="fa fa-github"style="font-size:30px"></i> </a>
+<a href="http://www.instagram.com/LHudson3222"><i class="fa fa-instagram"style="font-size:30px"></i> </a>
+<a href="https://plus.google.com/u/0/"><i class="fa fa-google plus"style="font-size:30px"></i> </a>
+<a href="mailto:lhudson322@gmail.com"><i class="fa fa-envelope"style="font-size:30px"></i> </a>
+<a href="tel:423-308-7730"><i class="fa fa-phone"style="font-size:30px"></i> </a><br>
 
+
+
+
+  <!--<a href="https://www.eventbrite.com/d/fl--port-st.-lucie/new-years-eve-parties/">Port Saint Lucie FL.</a><br>-->
+  <!--This is Larry Hudson's page jope you like it once again-->
+  <!--<a href="http://www.instagram.com/LHudson3222">Instagram</a><br>-->
+  <!--<a href="https://plus.google.com/u/0/">Google Plus</a><br>-->
+<!--  <a href="mailto:lhudson322@gmail.com">Email</a>  <br>-->
+<!--<a href="mailto:lhudson322@gmail.com">Email</a> <br>-->
+  <!--<a href="tel:423-777-9311">My REAL phone number.</a><br><br>-->
+<br>
   @ 2018 LJH
 </body>
 </html>
