--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style color="green">
   body{
     background-color:yellow;
@@ -83,7 +83,18 @@
 <a href="mailto:lhudson322@gmail.com">Email</a> <br>
   <a href="tel:423-777-9311">My REAL phone number.</a><br><br>
 
+
+  <h2>Contact Me:</h2>
+<a href="https://github.com/LarryHudson322"><i class="fa fa-github"style="font-size:30px"></i> </a>
+<a href="http://www.instagram.com/LHudson3222"><i class="fa fa-instagram"style="font-size:30px"></i> </a>
+<a href="https://plus.google.com/u/0/"><i class="fa fa-google plus"style="font-size:30px"></i> </a>
+<a href="mailto:lhudson322@gmail.com"><i class="fa fa-envelope"style="font-size:30px"></i> </a>
+<a href="tel:423-308-7730"><i class="fa fa-phone"style="font-size:30px"></i> </a><br>
+
+
+
 <footer text-align:center>
+  <br>
   @ 2018 LJH
 </footer>
 
