--- a/exercise/create.html
+++ b/exercise/create.html
@@ -185,13 +185,14 @@ div {
   }
 </style>
 
+</div>
 
 </head>
 
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 <body>
 
-<h2 align="center">Hello World This Is </h2>
+<h2 align="center">Welcome To </h2>
 <h1 align="center">Larry Hudson's page</h1>
 
 <p>Click and slide the blue slider to see the two images:</p>
