--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <style color="green">
   body{
     background-color:yellow;
@@ -9,6 +10,7 @@
   body{
     font-family: cursive;
   }
+
 
   </style>
   <meta charset="UTF-8">
@@ -31,6 +33,7 @@
 
 </head>
 <link type="text/css" rel="stylesheet" href="../css/style.css"/>
+
 <body>
 <p>
   <!--<form>
@@ -89,6 +92,7 @@
 
 <textarea name="message" placeholder="Your message" rows="8" cols="40"></textarea>
 <button type="submit">Submit</button>
+
 </form>
 
 <h1>Connect With Me</h1>
@@ -103,7 +107,9 @@
 <a href="mailto:lhudson322@gmail.com"><i class="fa fa-envelope"style="font-size:30px"></i> </a>
 <a href="tel:423-308-7730"><i class="fa fa-phone"style="font-size:30px"></i> </a><br>
 <br><br>
-  @ 2018 LJH
 
+
+  @ 2018 LJH
+<script text=JavaScript src="contact.js">
 </body>
 </html>
