--- a/exercise/index.html
+++ b/exercise/index.html
@@ -15,18 +15,23 @@ body, html {
     background-image: url("while/img_1548.jpg");
 
     /* Full height */
-    height: 100%;
+    width: 300px;
+
 
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover
 }
 </style>
 </head>
 <body>
 
-<div class="bg"></div>
+<div class="bg">
+  <h1>WELCOME</h1>
+  <h1>WELCOME</h1>
+
+</div>
 
 
 
