--- a/projects/index.html
+++ b/projects/index.html
@@ -10,6 +10,20 @@
     font-family: cursive;
   }
 
+  .highlighted{
+    background-color: blue;
+    width: 20%;
+  }
+
+   h1:hover{
+    background-color: blue;
+    width: 35%;
+  }
+  ul{
+    width:650px;
+  }
+
+
   </style>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
